<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--  Add Worker Icon noch Ändern -->
    <item
    android:id="@+id/action_add_worker"
    android:icon="@drawable/ic_search_white_48dp"
    android:title="@string/action_add_worker"
    app:showAsAction="never" />
    <item
        android:id="@+id/action_del_worker"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/action_del_worker"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_account"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/action_change_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_load"
        android:title="@string/action_load"
        app:showAsAction="ifRoom" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>